# exhale

./: .env.example  .gitignore  DEPLOYMENT.md  LEARNING.md  LICENSE  PRIVACY.md  README.md  index.html  main.py  package.json
.github/: FUNDING.yml
.github/workflows/: dev-builds.yml  release.yml  test.yml
electron/: .gitignore  index.css  package.json
electron/src/: main.ts
exhale/exhale/: AppDelegate.swift  BreathingView.swift  ContentView.swift  CustomMenu.swift  SettingsModel.swift  SettingsView.swift  exhaleApp.swift  types.swift
exhale/exhale.xcodeproj/: project.pbxproj
exhale/exhale.xcodeproj/project.xcworkspace/xcuserdata/peterklingelhofer.xcuserdatad/: UserInterfaceState.xcuserstate
exhale/exhaleTests/: exhaleTests.swift
exhale/exhaleUITests/: exhaleUITestsLaunchTests.swift
perl/: main.pl
python/: main.py
rust/: Cargo.toml  README.md
rust/crates/exhale-app/: Cargo.toml  build.rs
rust/crates/exhale-app/src/: app_icon.rs  bootstrap.rs  hotkeys.rs  keymap.rs  main.rs  overlay.rs  placement.rs  platform.rs  settings_window.rs  timers.rs  tray.rs
rust/crates/exhale-app/src/platform/: linux.rs  mac.rs  win.rs
rust/crates/exhale-app/src/settings_window/: theme.rs  widgets.rs
rust/crates/exhale-core/: Cargo.toml
rust/crates/exhale-core/src/: controller.rs  easing.rs  lib.rs  poison.rs  settings.rs  settings_manager.rs  types.rs
rust/crates/exhale-render/: Cargo.toml
rust/crates/exhale-render/examples/: cpu_bench.rs
rust/crates/exhale-render/src/: gpu_context.rs  headless.rs  lib.rs  renderer.rs  uniforms.rs
rust/crates/exhale-render/src/shaders/: overlay.wgsl
rust/packaging/linux/: exhale.desktop
rust/packaging/linux/snap/: snapcraft.yaml
rust/packaging/windows/: AppxManifest.xml
rust/scripts/: bundle-appimage.sh  bundle-mas.sh  bundle-msix.ps1  cpu_bench.sh  release.sh
snap/: snapcraft.yaml
src/: main.ts  renderer.ts
swift/exhale/: AppDelegate.swift  CombinedStepperTextField.swift  ContentView.swift  ControlButton.swift  CustomMenu.swift  EmptyClosingView.swift  MetalBreathingController.swift  MetalOverlayRenderer.swift  MetalOverlayView.swift  OverlayShaders.metal  OverlayUniforms.swift  SettingsModel.swift  SettingsView.swift  exhaleApp.swift  types.swift
swift/exhale.xcodeproj/: project.pbxproj
swift/exhale.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
swift/exhale.xcodeproj/project.xcworkspace/xcuserdata/peterklingelhofer.xcuserdatad/: UserInterfaceState.xcuserstate
swift/exhale.xcodeproj/xcuserdata/peterklingelhofer.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
swift/exhale.xcodeproj/xcuserdata/peterklingelhofer.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/exhale/Assets.xcassets/AppIcon.appiconset/: Contents.json
swift/exhale/Assets.xcassets/StatusBarIcon.imageset/: Contents.json
swift/exhaleTests/: exhaleTests.swift
swift/exhaleUITests/: exhaleUITests.swift  exhaleUITestsLaunchTests.swift
typescript/: eslint.config.js  eslint.config.mjs  index.css  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.preload.json
typescript/src/: main.ts  preload.ts  renderer.ts
