[workspace]
members = [
    "crates/exhale-core",
    "crates/exhale-render",
    "crates/exhale-app",
]
resolver = "2"

[workspace.dependencies]
exhale-core   = { path = "crates/exhale-core" }
exhale-render = { path = "crates/exhale-render" }

serde      = { version = "1",    features = ["derive"] }
toml       = "0.8"
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
rand       = "0.8"
wgpu       = "22"
winit      = "0.30"
pollster   = "0.3"

# UI — egui 0.29 uses winit ^0.30 and wgpu ^0.20, matching our stack exactly.
egui        = "0.29"
egui-winit  = "0.29"
egui-wgpu   = { version = "0.29", features = ["winit"] }

# Platform
tray-icon     = "0.19"
global-hotkey = "0.6"
notify-rust   = "4"
