[workspace]
members = [
    "crates/exhale-core",
    "crates/exhale-render",
    "crates/exhale-app",
]
resolver = "2"

[patch.crates-io]
# Local fork that stubs out `Window::set_blur` on macOS. Upstream calls
# `_CGSSetWindowBackgroundBlurRadius`, a private CoreGraphics symbol that
# Apple's App Store review rejects (non-public API). We never call set_blur
# ourselves, but the symbol survives LTO because the call site is gated on
# a runtime field. See vendor/winit/src/platform_impl/macos/window_delegate.rs
winit = { path = "../vendor/winit" }

[profile.release]
# Cross-crate dead-code elimination. Without this, winit's unused
# `Window::set_blur` is retained and pulls in its `extern "C"`
# declaration of the private `_CGSSetWindowBackgroundBlurRadius`,
# which Apple's App Store review flags as a non-public API and
# rejects the submission. LTO=true (fat) strips unreachable fns
# across the whole crate graph and removes the symbol.
# Build time ~2-3x longer for release, binary slightly smaller
lto         = true
codegen-units = 1
strip       = "symbols"

[workspace.dependencies]
exhale-core   = { path = "crates/exhale-core" }
exhale-render = { path = "crates/exhale-render" }

serde      = { version = "1",    features = ["derive"] }
toml       = "0.8"
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
rand       = "0.8"
wgpu       = "22"
winit      = "0.30"
pollster   = "0.3"

# UI — egui 0.29 uses winit ^0.30 and wgpu ^0.20, matching our stack exactly.
egui        = "0.29"
egui-winit  = "0.29"
egui-wgpu   = { version = "0.29", features = ["winit"] }

# Platform
tray-icon     = "0.19"
global-hotkey = "0.6"
notify-rust   = "4"
